--- a/src/scss/tools/_variables.scss
+++ b/src/scss/tools/_variables.scss
@@ -18,7 +18,7 @@ $black-6: #9E9E9E;
 $black-7: #BDBDBD;
 $black-8: #E0E0E0;
 
-$main-color: #3F51B5;
+$main-color: #b54522;
 $main-color-hover: #3949AB;
 
 $second-color: #FFC107;
