--- a/App/Views/base.twig
+++ b/App/Views/base.twig
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="assets/css/app.min.css">
 </head>
 <body>
     {% block body %}
     {% endblock %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js'></script>
+    <script src="assets/js/app.min.js"></script>
 </body>
 </html>
