--- a/src/scss/tools/_variables.scss
+++ b/src/scss/tools/_variables.scss
@@ -2,61 +2,26 @@
 
 // Fonts
 $main-font: 'Open Sans', sans-serif;
-$heading-font: 'Source Sans Pro', sans-serif;
+$main-size: 18px;
+$text-size: 14px;
+$slider-size: 12px;
+$italic: italic;
+$extra-bold: 800;
 
 // Colors
-$white: #fff;
+$white: #FFFFFF;
+$grey: #3b4360;
+$black: #000000;
+$first-color: #dc0368;
+$second-color: #6c0287;
+$third-color: #161e38;
 
-$grey: #f7f7f7;
-
-$black: #000;
-$black-2: #333;
-$black-3: #424242;
-$black-4: #616161;
-$black-5: #757575;
-$black-6: #9E9E9E;
-$black-7: #BDBDBD;
-$black-8: #E0E0E0;
-
-$main-color: #b54522;
-$main-color-hover: #3949AB;
-
-$second-color: #FFC107;
-$second-color-hover: #FFB300;
-
-$danger-color: #E53935;
-$danger-color-hover: #D32F2F;
-
-$warning-color: #FB8C00;
-$warning-color-hover: #F57C00;
-
-$success-color: #4CAF50;
-$success-color-hover: #43A047;
+// Gradient
+$gradient: linear-gradient(90deg, $first-color 0%, $second-color 99%, $second-color 100%);
 
 // Box shadow
-$box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.12);
+$box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.12);
 $box-shadow-2: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
-
-// Border radius
-$border-radius: 3px;
 
 // Transition
 $transition: all 0.3s ease-in-out;
-
-// Text shadow
-$text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
-
-// Breakpoints
-$phone: 544px;
-$tablet: 768px;
-$desktop: 992px;
-$wide-desktop: 1200px;
-
-// Z-index
-$zindex: 1;
-$zindex-2: 5;
-$zindex-3: 10;
-$zindex-4: 15;
-$zindex-5: 20;
-$zindex-6: 25;
-$zindex-7: 30;
