:lipstick: Css update

--- a/App/Views/pages/index.twig
+++ b/App/Views/pages/index.twig
@@ -40,7 +40,7 @@
             </div>
         </section>
         <!-- Section which contains the slidebar with the constellation's informations -->
-        <section class="container-informations">
+        <section class="container-informations container-informations-active">
             <div class="informations">
                 <!-- Cross to close the slidebar -->
                 <div class="cross"></div>
