:racehorse: rush intensive week omg

--- a/App/Views/pages/index.twig
+++ b/App/Views/pages/index.twig
@@ -5,7 +5,7 @@
     <section class="container-space">
         <!-- Div for the logo -->
         <div class="logo">
-
+            <img src="{{ asset('img/logo_sky.png') }}" alt="">
         </div>
         <!-- Section which contains the city choose by the user and the current date -->
         <section class="user-informations">
