--- a/src/scss/components/space.scss
+++ b/src/scss/components/space.scss
@@ -21,6 +21,7 @@ body.body-space
             top: 50px;
             left: 50px;
             background: $white;
+            z-index: 15;
         }
 
         /* User's informations */
