--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -14,13 +14,19 @@ body.body-index
         width: 100%;
         background: rgba(#12122f, 0.87);
 
-        h1
+        .logo
         {
-            padding-top: 20vh;
-            transform: translateY(-25%);
-            font-size: 64px;
-            font-weight: $extra-bold;
-            color: $first-color;
+            height: 200px;
+            width: 200px;
+            margin: auto;
+            padding: 50px;
+
+            img
+            {
+                height: 100%;
+                width: auto;
+                z-index: 30;
+            }
         }
 
         h2
@@ -38,7 +44,7 @@ body.body-index
 
         form
         {
-            input
+            input[type = "text"]
             {
                 text-align: center;
                 padding: 10px;
@@ -53,23 +59,35 @@ body.body-index
                     opacity: 0.2;
                 }
             }
+
+            input[type = "submit"]
+            {
+                height: 50px;
+                width: 140px;
+                display: block;
+                margin: auto;
+                margin-top: 25px;
+                background-image: $gradient;
+                line-height: 50px;
+                color: $white;
+                text-decoration: none;
+                text-transform: uppercase;
+                font-weight: $extra-bold;
+                outline: none;
+                border: none;
+                cursor: pointer;
+                transition: all 0.3s ease;
+
+                &:hover
+                {
+                    color: $first-color;
+                    background: transparent;
+                    border: 2px $first-color solid;
+                }
+            }
         }
 
-        a // faire animation sympa à la http://gemstones.elespacio.net/
-        {
-            height: 50px;
-            width: 140px;
-            display: inline-block;
-            margin-top: 100px;
-            background-image: $gradient;
-            line-height: 50px;
-            color: $black;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-weight: $extra-bold;
-        }
-
-        img
+        img.bg
         {
             height: auto;
             width: 100%;
