--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -8,6 +8,8 @@ body.body-index
     font-family: $main-font;
     color: $white;
 
+    background-repeat: repeat-y;
+
     .container-landing
     {
         height: 100%;
