:lipstick: add icons on informations container

--- a/App/Views/pages/index.twig
+++ b/App/Views/pages/index.twig
@@ -50,9 +50,15 @@
                 <div class="informations-navigation">
                     <div class="navigation-bar progress-bar"></div>
                     <div class="navigation-bar"></div>
-                    <a href="#" data-index="0" class="navigation navigation-history navigation-active">H</a>
-                    <a href="#" data-index="1" class="navigation navigation-environment">E</a>
-                    <a href="#" data-index="2" class="navigation navigation-visibility">V</a>
+                    <a href="#" data-index="0" class="navigation navigation-history navigation-active">
+                        <img src="{{ asset('img/history.png') }}" alt="Visibility icon">
+                    </a>
+                    <a href="#" data-index="1" class="navigation navigation-environment">
+                        <img src="{{ asset('img/environment.png') }}" alt="Visibility icon">
+                    </a>
+                    <a href="#" data-index="2" class="navigation navigation-visibility">
+                        <img src="{{ asset('img/visibility.png') }}" alt="Visibility icon">
+                    </a>
                 </div>
 
                 <div class="information-content">
