--- a/App/Views/pages/welcome.twig
+++ b/App/Views/pages/welcome.twig
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<body class="body-index">
-<section class="container-landing" style="background-image:url('{{ asset('img/bg.png') }}');">
+<body class="body-index" style="background-image:url('{{ asset('img/bg.png') }}');">
+<section class="container-landing">
     <!-- Name of the website -->
     <div class="logo">
         <img src="{{ asset('img/logo_sky.png') }}" alt="Logo of the website">
