--- a/src/scss/components/space.scss
+++ b/src/scss/components/space.scss
@@ -162,6 +162,7 @@ body.body-space
                                 -moz-user-select: none;
                                 -webkit-user-select: none;
                                 -ms-user-select: none;
+                                transition: all 0.3s ease;
                             }
 
                             .button-constellation
@@ -176,6 +177,7 @@ body.body-space
                                 border-radius: 10px;
                                 outline: none;
                                 cursor: pointer;
+                                transition: all 0.3s ease;
                             }
                         }
 
@@ -210,7 +212,6 @@ body.body-space
 
                             .button-constellation
                             {
-                                background: $second-color;
 
                                 &::after
                                 {
@@ -382,6 +383,17 @@ body.body-space
                         line-height: 30px;
                         will-change: transform;
                         transition: transform 0.3s ease;
+                        line-height: 30px;
+
+                        img
+                        {
+                            height: 20px;
+                            width: auto;
+                            position: absolute;
+                            top: calc(50% - 10px);
+                            left: 50%;
+                            transform: translateX(-50%);
+                        }
                     }
 
                     .navigation-active
