--- a/App/Views/pages/500.twig
+++ b/App/Views/pages/500.twig
@@ -2,7 +2,19 @@
 
 {% block content %}
 
-    <body>
-    <h1>500 : An error occurred</h1>
+<body class="body-index">
+<section class="container-landing" style="background-image:url('{{ asset('img/bg.png') }}');">
+    <!-- Name of the website -->
+    <div class="logo">
+        <img src="{{ asset('img/logo_sky.png') }}" alt="Logo of the website">
+    </div>
+    <!-- Explains how to navigate in the website -->
+    <h2>505 error</h2>
+    <p>Sorry, an error occurred.git </p>
+    <!-- Input for the city that the user enter -->
+    <a class="button-home" href="">Return to the home</a>
+
+
+</section>
 
 {% endblock %}
