:card_index:  button action click boundary constellations

--- a/App/Views/pages/500.twig
+++ b/App/Views/pages/500.twig
@@ -9,8 +9,8 @@
         <img src="{{ asset('img/logo_sky.png') }}" alt="Logo of the website">
     </div>
     <!-- Explains how to navigate in the website -->
-    <h2>505 error</h2>
-    <p>Sorry, an error occurred.git </p>
+    <h2>500 error</h2>
+    <p>Sorry, an error occurred</p>
     <!-- Input for the city that the user enter -->
     <a class="button-home" href="">Return to the home</a>
 
