--- a/src/scss/tools/_variables.scss
+++ b/src/scss/tools/_variables.scss
@@ -2,6 +2,7 @@
 
 // Fonts
 $main-font: 'Open Sans', sans-serif;
+$data-font: 'Source Code Pro', monospace;
 $main-size: 18px;
 $text-size: 14px;
 $slider-size: 12px;
