--- a/App/Views/layouts/default.twig
+++ b/App/Views/layouts/default.twig
@@ -7,7 +7,7 @@
 
     <title>{{ title(title) }}</title>
     <meta name="description" content="{{ description }}" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600i,800|Source+Code+Pro" rel="stylesheet">
     <link href="{{ asset('css/app.min.css') }}" rel="stylesheet" type="text/css" />
 </head>
 
